Added a few starter methods for querying a model

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A JavaScript implementation of object relational mapping",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "mocha --reporter spec"
   },
   "egines": {
