--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Alex Griffiths",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.3",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
